server.js.logs/0.txt

D:\jdew\gitRepos\node_upload\server.js:27
    console.log((/^[a-zA-Z0-9_\\/\-]+\.js\.logs\/\d+\.txt$/gi.test(req.url));
                                                                            ^

node.js:201
        throw e; // process.nextTick error, or 'error' event on first tick
              ^
GetConsoleTitleW: The operation completed successfully.
SyntaxError: Unexpected token ;
    at Module._compile (module.js:429:25)
    at Object..js (module.js:459:10)
    at Module.load (module.js:348:31)
    at Function._load (module.js:308:12)
    at Array.0 (module.js:479:10)
    at EventEmitter._tickCallback (node.js:192:40)
